--- a/public/index.html
+++ b/public/index.html
@@ -9,15 +9,33 @@
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
-  <!-- <link rel="manifest" href="/manifest.json"> -->
-  <!-- <link rel="shortcut icon" href="/favicon.ico"> -->
-  <title>Dinh Thanh Dat || Project</title>
+  <link rel="manifest" href="/public/manifest.json"> 
+  <link rel="shortcut icon" href="/public/favicon.ico"> 
+  <title>Danney's Blog</title>
 
   <!-- load fonts - icon font -->
-  <link
+   <!--  <link
     href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap"
-    rel="stylesheet">
+    rel="stylesheet">-->
+
+        <!-- load fonts -->
+    <link rel="preload" href="/public/static/fonts/Roboto/Roboto-Black.ttf" as="font" type="font/ttf" crossorigin>
+    <link rel="preload" href="/public/static/fonts/Roboto/Roboto-BlackItalic.ttf" as="font" type="font/ttf" crossorigin>
+    <link rel="preload" href="/public/static/fonts/Roboto/Roboto-Bold.ttf" as="font" type="font/ttf" crossorigin>
+    <link rel="preload" href="/public/static/fonts/Roboto/Roboto-BoldItalic.ttf" as="font" type="font/ttf" crossorigin>
+    <link rel="preload" href="/public/static/fonts/Roboto/Roboto-Italic.ttf" as="font" type="font/ttf" crossorigin>
+    <link rel="preload" href="/public/static/fonts/Roboto/Roboto-Light.ttf" as="font" type="font/ttf" crossorigin>
+    <link rel="preload" href="/public/static/fonts/Roboto/Roboto-LightItalic.ttf" as="font" type="font/ttf" crossorigin>
+    <link rel="preload" href="/public/static/fonts/Roboto/Roboto-Medium.ttf" as="font" type="font/ttf" crossorigin>
+    <link rel="preload" href="/public/static/fonts/Roboto/Roboto-MediumItalic.ttf" as="font" type="font/ttf" crossorigin>
+    <link rel="preload" href="/public/static/fonts/Roboto/Roboto-Regular.ttf" as="font" type="font/ttf" crossorigin>
+    <link rel="preload" href="/public/static/fonts/Roboto/Roboto-Thin.ttf" as="font" type="font/ttf" crossorigin>
+    <link rel="preload" href="/public/static/fonts/Roboto/Roboto-ThinItalic.ttf" as="font" type="font/ttf" crossorigin>
+
+
+
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+  <link rel="stylesheet" href="/public/font.css" />
 </head>
 
 <body>
